--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
     "request": "^2.88.2",
-    "winston": "^3.13.0",
-    "botly": "^1.0.0"
+    "winston": "^3.13.0"
   },
   "engines": {
     "node": "20.x"
