--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
+     "node-cache": "^5.1.2",
     "request": "^2.88.2",
     "winston": "^3.13.0"
   },
